fix: ensure cover hero properly covers the background

--- a/src/components/Hero/component.module.css
+++ b/src/components/Hero/component.module.css
@@ -3,7 +3,7 @@
 
   padding: 2rem 1rem;
   color: var(--jahia-color);
-  background: var(--jahia-background);
+  background: var(--jahia-background) center / cover;
 
   /* Visual variations, configurable in the "Layout" section of jContent */
   &[data-bg="plusses"] {
